[project]
name = "ylab-qc-angle"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tenjo-t", email = "tenjo0314takashi@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.4",
]

[tool.hatch.metadata]
allow-direct-references = true
